# gsoc2012-kdiamond

./: CMakeLists.txt  README.md  config.h.in
src_common/: game-state.cpp  game-state.h
src_qml/: CMakeLists.txt  board.cpp  board.h  main.cpp  mainwindow.cpp  mainwindow.h  qmlfiles.qrc
src_qml/declarative/: AboutDialog.qml  Board.qml  Button.qml  LeftPanel.qml  Listdialog.qml  PopUp.qml  Quitdialog.qml  RightPanel.qml  Themedialog.qml  main.qml
src_qml/declarative/images/: .directory
src_qml/declarative/images/diamonds/: .directory
src_qml/declarative/images/egyptian/: .directory
src_qwidget/: CMakeLists.txt  game.h  mainwindow.cpp  mainwindow.h
